# TEST

./: .gitignore
client/: README.md
client/MainUI/: CMakeLists.txt  CMakeLists.txt.user.69b13fe  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/MainUI/src/core/: database_manager.cpp  database_manager.h
client/MainUI/src/models/: inventory_model.h  inventory_order_logs_model.h  manufacture_model.h  product_model.h
client/MainUI/src/services/: auth_service.cpp  auth_service.h  dashboard_service.cpp  dashboard_service.h  delivery_service.cpp  delivery_service.h  environment_logs_service.cpp  environment_logs_service.h  manufacture_manage_service.cpp  manufacture_manage_service.h  manufacture_service.cpp  manufacture_service.h  opcua_service.cpp  opcua_service.h  scm_manage_service.cpp  scm_manage_service.h
client/MainUI/src/views/: dashboard_widget.cpp  dashboard_widget.h  dashboard_widget.ui  delivery_dialog.cpp  delivery_dialog.h  delivery_dialog.ui  delivery_widget.cpp  delivery_widget.h  delivery_widget.ui  environment_logs_widget.cpp  environment_logs_widget.h  environment_logs_widget.ui  login_widget.cpp  login_widget.h  login_widget.ui  logistics_schedule_dialog.cpp  logistics_schedule_dialog.h  logistics_schedule_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  manufacture_schedule_dialog.cpp  manufacture_schedule_dialog.h  manufacture_schedule_dialog.ui  manufacture_widget.cpp  manufacture_widget.h  manufacture_widget.ui  order_edit_dialog.cpp  order_edit_dialog.h  order_edit_dialog.ui  partner_manage_widget.cpp  partner_manage_widget.h  partner_manage_widget.ui  process_widget.cpp  process_widget.h  process_widget.ui  produce_add_dialog.cpp  produce_add_dialog.h  produce_add_dialog.ui  scm_manage_widget.cpp  (+5 more)
client/MainUI/src/views/base/: base_page_widget.h  page_types.h
database/: setup_db.sh
secu_mod_ctr_src/: mes_client  mes_client.c  mfg_server  mfg_server.c
servers/certs/log/: cert.pem  key.der  log_opcua.cnf
servers/certs/mes/: cert.der  key.der  key.pem  trust_log.der
servers/certs/mfg/: key.der  key.pem  mfg_opcua.cnf
servers/logistics/: log_server.c
servers/manufacturing/: mfg_server  mfg_server.c
servers/mes_client/: mes_client.c
servers_mod/certs/log/: key.pem
servers_mod/certs/mes/: cert.pem  mes_opcua.cnf
servers_mod/certs/mfg/: cert.der  cert.pem
servers_mod/logistics/: log_server  log_server.c  modbus.c  modbus_log.h
servers_mod/manufacturing/: mfg_server  mfg_server.c  modbus.c  modbus_mfg.h
servers_mod/mes_client/: mes_client  mes_client.c
